# avrsd

./: .gitignore  CMakeLists.txt  README.md
cmake/: avr-toolchain.cmake
scripts/: avrunit-result.py
src/: CMakeLists.txt  sd.c  sd.h  spi.c  spi.h  spi_driver.c  spi_driver.h
tests/: CMakeLists.txt
tests/sd/: CMakeLists.txt  test_sd.c
tests/sd_rw/: CMakeLists.txt  test_sd_rw.c
tests/spi/: CMakeLists.txt  test_spi.c
